Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1073

mandatory (LOCK_MAND) flock requests cause unknown fcntl lock type: 32 Lustre error messages

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.2.0
    • None
    • None
    • samba 3.6.x running over Lustre fs.
    • 2
    • 4742

      running samba (or any application which uses LOCK_MAND) on Lustre floods system log with error messages:

      LustreError: 13022:0:(file.c:2044:ll_file_flock()) unknown fcntl lock type: 32
      LustreError: 13022:0:(file.c:2044:ll_file_flock()) Skipped 746 previous similar messages

            wc-triage WC Triage
            zam Alexander Zarochentsev
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: