LU-1073 llite: no CERROR on unknown flock type

Xyratex-bug-id: MRP-215

Signed-off-by: Alexander Zarochentsev <alexander_zarochentsev@xyratex.com>
Change-Id: I435c3282bc87750f6ebd19e618a1ee8e229834d2